signinCount, favoriteCount notifications
